# universal-driver

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  codecov.yml  debug.py  rebuild_python_core.sh  shell.nix
jdbc_bridge/: Cargo.toml  build.rs
jdbc_bridge/src/: lib.rs  sflogger_layer.rs
odbc/: Cargo.toml  README.md  build.rs  exports.def
odbc/include/: sf_odbc.h
odbc/src/: c_api.rs  cdata_types.rs  lib.rs  write_json.rs
odbc/src/api/: api_utils.rs  bitmask.rs  connection.rs  data.rs  descriptor.rs  diagnostic.rs  encoding.rs  environment.rs  error.rs  handle_allocation.rs  mod.rs  runtime.rs  sql_state.rs  statement.rs  types.rs  utils.rs
odbc/src/conversion/: binary.rs  binary_tests.rs  boolean.rs  boolean_tests.rs  date.rs  decfloat.rs  decfloat_tests.rs  error.rs  mod.rs  nullable.rs  number.rs  number_tests.rs  numeric_helpers.rs  param_binding.rs  real.rs  real_tests.rs  semi_structured_tests.rs  test_utils.rs  time.rs  time_tests.rs  timestamp.rs  timestamp_tests.rs  traits.rs  varchar.rs  warning.rs
odbc/tests/: odbc_api_tests.rs
odbc_tests/: BehaviorDifferences.yaml  CMakeLists.txt  Dockerfile  run.ps1  run.sh  run_reference.ps1  run_reference.sh
odbc_tests/common/: CMakeLists.txt
odbc_tests/common/include/: Connection.hpp  EnvOverride.hpp  HandleWrapper.hpp  MetaOfSqlCTypes.hpp  ODBCConfig.hpp  ODBCFixtures.hpp  ReadOnlyDbFixture.hpp  Schema.hpp  SessionParameterOverride.hpp  TestTable.hpp  compatibility.hpp  conversion_checks.hpp  cross_thread_cancel.hpp  get_data.hpp  get_descriptor.hpp  get_diag_rec.hpp  macros.hpp  odbc_cast.hpp  odbc_matchers.hpp  odbc_return_code.hpp  put_get_utils.hpp  query_helpers.hpp  require.hpp  test_macros.hpp  test_setup.hpp  timestamp_incompatible_checks.hpp  utils.hpp
odbc_tests/common/src/: ConfigInstallation.cpp  DataSourceConfig.cpp  ODBCConfig.cpp  UnixConfigInstallation.cpp  WindowsConfigInstallation.cpp  compatibility.cpp  get_diag_rec.cpp  query_helpers.cpp
odbc_tests/tests/: CMakeLists.txt
odbc_tests/tests/auth_tests/: pat.cpp
odbc_tests/tests/basic_tests/: test.cpp
odbc_tests/tests/bindings_tests/: test.cpp
odbc_tests/tests/conversion_matrix/: CMakeLists.txt  bindparam_to_array.cpp  bindparam_to_binary.cpp  bindparam_to_boolean.cpp  bindparam_to_date.cpp  bindparam_to_decfloat.cpp  bindparam_to_fixed.cpp  bindparam_to_interval.cpp  bindparam_to_object.cpp  bindparam_to_real.cpp  bindparam_to_text.cpp  bindparam_to_time.cpp  bindparam_to_timestamp.cpp  bindparam_to_timestamp_ltz.cpp  bindparam_to_timestamp_tz.cpp  bindparam_to_variant.cpp  conversion_matrix_common.hpp  getdata_array.cpp  getdata_binary.cpp  getdata_boolean.cpp  getdata_date.cpp  getdata_decfloat.cpp  getdata_float.cpp  getdata_number.cpp  getdata_object.cpp  getdata_time.cpp  getdata_timestamp.cpp  getdata_timestamp_ltz.cpp  getdata_timestamp_tz.cpp  getdata_varchar.cpp  getdata_variant.cpp
odbc_tests/tests/datatype_tests/: CMakeLists.txt  number_tests.cpp  real_tests.cpp  string_tests.cpp
odbc_tests/tests/e2e/: CMakeLists.txt
odbc_tests/tests/integration/: CMakeLists.txt
odbc_tests/tests/odbc-api/: CMakeLists.txt  sql_get_info.cpp
odbc_tests/tests/replay/: CMakeLists.txt
odbc_tests/tests/setup/: CMakeLists.txt  setup_readonly_db.cpp
odbc_trace_tool/: Cargo.toml  build.rs
odbc_trace_tool/src/: lib.rs  main.rs  model.rs
odbc_trace_tool/src/generator/: cpp.rs
odbc_trace_tool/src/parser/: iodbc.rs  mod.rs  unixodbc.rs
odbc_trace_tool/src/replayer/: mod.rs
proto_generator/: Cargo.toml  README.md
proto_generator/src/: generator.rs  lib.rs  main.rs  protoc_installer.rs
proto_generator/src/generators/: helpers.rs  java_generator.rs  json_generator.rs  python_generator.rs  rust_generator.rs
python/: .gitignore  BehaviorDifferences.yaml  Cargo.toml.sdist  README.md  error_trace  error_trace_derive  hatch_build.py  hatch_build_hooks.py  proto_generator  proto_utils  pyproject.toml  ruff.toml  sf_core
python/tests/: README.md  compatibility.py  config.py  conftest.py  connector_factory.py  connector_types.py  private_key_helper.py  test_exceptions.py  utils.py  wiremock_client.py
python/tests/e2e/: conftest.py
python/tests/integ/: test_connection.py  test_connection_server_echoed_properties.py  test_cursor.py  test_cursor_format_properties.py  test_errors.py  test_session_parameters.py  test_snowflake_restful.py  utils_put_get.py
python/tests/packaging/: __init__.py  test_editable.py  test_sdist.py  test_wheel_build.py
python/tests/unit/: test_arrow_context.py  test_binding_converters.py  test_binding_serializer.py  test_config_manager.py  test_connection.py  test_connection_numpy.py  test_cursor.py  test_extras.py  test_logging.py  test_module.py  test_private_key_conversion.py  test_result_batch.py  test_types.py
sf_core/: Cargo.toml  README.md  build.rs  exports.def
sf_core/benches/: prefetch_bench.rs
sf_core/src/: arrow_utils.rs  async_bridge.rs  auth.rs  c_api.rs  chunks.rs  compression.rs  compression_types.rs  lib.rs  query_types.rs  sensitive.rs  token_cache.rs
sf_core/src/chunks/: arrow_parser.rs  error.rs  http_downloader.rs  json_parser.rs  mock.rs  mod.rs  prefetch.rs
sf_core/src/config/: config_manager.rs  connection_config.rs  mod.rs  param_registry.rs  param_store.rs  path_resolver.rs  resolver.rs  rest_parameters.rs  retry.rs  settings.rs  toml_loader.rs
sf_core/src/crl/: cache.rs  config.rs  disk_tests.rs  error.rs  integration_test.rs
sf_core/src/file_manager/: encryption.rs  file_transfer.rs  gcs_transfer.rs  mod.rs  path_expansion.rs  s3_transfer.rs  types.rs
sf_core/src/http/: retry.rs
sf_core/src/logging/: c_api.rs  mod.rs
sf_core/src/perf_timing/: c_api.rs  mod.rs
sf_core/src/protobuf/: c_api.rs  config_setting_ext.rs  mod.rs
sf_core/src/protobuf_apis/: database_driver_v1.rs
sf_core/src/protobuf_gen/: mod.rs  (+1 more)
sf_core/tests/: parity_tests.rs
tests/performance/: .gitignore  Jenkinsfile  Jenkinsfile.pr-check  README.md  conftest.py  pyproject.toml
tests/tests_format_validator/: Cargo.toml  run_validator.sh
(+929 files in other folders)
