# your_workspace/Cargo.toml
[workspace]
members = [
    "sf_core",
    "sf_mini_core",
    "sf_mini_core_static",
    "odbc",
    "jdbc_bridge",
    "proto_generator",
    "proto_utils",
    "sf_core/tests/common/arrow_deserialize_macro",
    "error_trace",
    "error_trace_derive",
]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
lto = false

[profile.dev]
opt-level = 1
