[package]
name = "jdbc_bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "jdbc_bridge"
crate-type = ["cdylib"]

[dependencies]
sf_core = { path = "../sf_core" }
proto_utils = { path = "../proto_utils" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing = "0.1.41"
tokio = { version = "1.50.0", features = ["rt"] }

[dependencies.jni]
version = "0.21"
default-features = false
features = ["invocation"] 
