[package]
name = "odbc"
version = "0.1.0"
edition = "2024"

[lib]
name = "sfodbc"
crate-type = ["cdylib", "rlib"]

[dependencies]
sf_core = { path = "../sf_core" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
snafu = "0.8.7"
odbc-sys = "0.25.1"
arrow = { version = "56.0.0", features = ["ffi"] }
chrono = "0.4.43"
base64 = "0.22.1"
serde_json = "1.0"
libc = "0.2"

proto_utils = { path = "../proto_utils" }
error_trace = { path = "../error_trace" }

[[test]]
name = "odbc_api_tests"
