[package]
name = "proto_generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proto_generator"
path = "src/main.rs"

[dependencies]
snafu = "0.7"
clap = { version = "4.0", features = ["derive"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-build = "0.14"
tempfile = "3.22.0"
log = "0.4.28"
env_logger="0.11.8"
walkdir = "2.5"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("arbitrary"))']

[dev-dependencies]
tempfile = "3.0"
