[build-system]
requires = ["hatchling", "Cython", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "snowflake-connector-python-ud"  # TODO: change this once ready, needs switching tests to UD
version = "0.1.0"
description = "A PEP 249 Database API 2.0 implementation for Snowflake"
readme = "README.md"
license = {text = "MIT"}

keywords = ["database", "api", "pep249", "dbapi", "python", "snowflake"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "protobuf>=6.32.1",
    "pytz",
]

[project.urls]
"Homepage" = "https://github.com/snowflakedb/universal-driver"
"Bug Reports" = "https://github.com/snowflakedb/universal-driver/issues"
"Source" = "https://github.com/snowflakedb/universal-driver"
"Documentation" = "https://github.com/snowflakedb/universal-driver/blob/main/README.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "hatch_build.py",
    "LICENSE",
    "README.md",
]
exclude = [
    "__pycache__",
    "src/snowflake/connector/_internal/nanoarrow_cpp/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake"]
artifacts = [
    "src/snowflake/connector/_core/*.so",
    "src/snowflake/connector/_core/*.dylib",
    "src/snowflake/connector/_core/*.dll",
    "src/snowflake/connector/_internal/*.so",
    "src/snowflake/connector/_internal/*.pyd",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.hooks.custom]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-xdist",
    "pytest-json-report",
    "pytest-split",
    "pytest-cov",
    "hypothesis",
    "requests",
    "brotli",
    "zstandard",
]
dev = [
    "ruff",
    "mypy",
    "hatchling",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "skip_reference(reason: str=''): skip when --connector=reference",
    "skip_universal(reason: str=''): skip when --connector=universal",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(pathname)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["snowflake"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/protobuf_gen/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = "src/**/"

[[tool.mypy.overrides]]
module = "snowflake.connector._internal.protobuf_gen.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ===== Hatch Configuration =====

[tool.hatch.envs.default]
features = ["test", "dev"]

# Precommit environment
[tool.hatch.envs.precommit.scripts]
check = [
    'ruff format --check {args:src/snowflake tests}',
    'ruff check {args:src/snowflake tests}',
    'mypy --install-types --non-interactive -p snowflake.connector',
]
fix = [
    'ruff format src/snowflake tests',
    'ruff check --fix src/snowflake tests',
    # Run format once again as linting may have changed files.
    'ruff format src/snowflake tests',
    'mypy --install-types --non-interactive -p snowflake.connector',
]

# Type checking environment
[tool.hatch.envs.type]
features = ["dev"]
scripts.run = "mypy src/snowflake"

# Test environment matrix
[tool.hatch.envs.test]
features = ["test"]
dev-mode = false

pre-install-commands = [
    "pip install {env:WHEEL_PATH:dist/*.whl}",
]

[tool.hatch.envs.test.env-vars]
# IMPORTANT: PARAMETER_PATH must be explicitly set
PARAMETER_PATH = "{env:PARAMETER_PATH:../parameters.json}"

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
# Install from source
install-wheel = "pip install dist/*.whl"
# Unit tests
unit = "pytest tests/unit {args}"
# Integration tests
integ = "pytest tests/integ --connector=universal {args}"
# End-to-end tests
e2e = "pytest tests/e2e --connector=universal {args}"
# All tests
all = "pytest tests/ --connector=universal {args}"
# All tests with coverage
all-cov = "pytest tests/ --connector=universal --cov=src/snowflake --cov-report=xml --cov-report=html {args}"

# Reference connector environment (installs local package + reference connector)
[tool.hatch.envs.reference]
features = ["test"]
pre-install-commands = [
    "pip install snowflake-connector-python -t old_driver_src"
]

[tool.hatch.envs.reference.scripts]
run = "pytest tests/integ tests/e2e --connector=reference {args}"

# CI environment for special CI tasks
[tool.hatch.envs.ci]
skip-install = false
dependencies = [
    "requests",
]

[tool.hatch.envs.ci.scripts]
compare = "python ci/reference_tests/compare_reports.py {args}"