[build-system]
requires = ["hatchling", "Cython", "setuptools", "mypy-protobuf~=5.0"]
build-backend = "hatchling.build"

[project]
name = "snowflake-connector-python-ud"  # TODO: change this once ready, needs switching tests to UD
dynamic = ["version"]
description = "A PEP 249 Database API 2.0 implementation for Snowflake"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["database", "api", "pep249", "dbapi", "python", "snowflake"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=44.0.1",
    "protobuf>=6.32.1",
    "pytz",
    "tomlkit>=0.13",
]

[project.urls]
"Homepage" = "https://github.com/snowflakedb/universal-driver"
"Bug Reports" = "https://github.com/snowflakedb/universal-driver/issues"
"Source" = "https://github.com/snowflakedb/universal-driver"
"Documentation" = "https://github.com/snowflakedb/universal-driver/blob/main/README.md"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-json-report",
    "pytest-split",
    "pytest-cov",
    "pytest-xdist",
    "pytest-randomly",
    "pytest-timeout",
    "hypothesis",
    "requests",
    "brotli",
    "zstandard",
    "tomlkit",
]
dev = [
    "ruff",
    "mypy",
    "hatchling",
    "types-pytz",
    "types-protobuf",
]

[tool.hatch.version]
path = "src/snowflake/connector/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "hatch_build.py",
    "LICENSE",
    "README.md",
    # Rust sources (directory symlinks dereferenced during sdist build)
    "sf_core/",
    "proto_utils/",
    "proto_generator/",
    "protobuf/",
    "error_trace/",
    "error_trace_derive/",
]
exclude = [
    "__pycache__",
    "src/snowflake/connector/_internal/nanoarrow_cpp/scripts",
    # Exclude Rust build artifacts
    "sf_core/target/",
    "proto_utils/target/",
    # Exclude sf_core tests (except arrow_deserialize_macro which is a dev-dependency)
    "sf_core/tests/e2e/",
    "sf_core/tests/integration/",
    "sf_core/tests/*.rs",
]

# Individual files need force-include (file symlinks are not dereferenced)
[tool.hatch.build.targets.sdist.force-include]
"Cargo.toml.sdist" = "Cargo.toml"
"../Cargo.lock" = "Cargo.lock"
"../build_common.rs" = "build_common.rs"

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake"]
artifacts = [
    "src/snowflake/connector/_core/*.so",
    "src/snowflake/connector/_core/*.dylib",
    "src/snowflake/connector/_core/*.dll",
    "src/snowflake/connector/_internal/*.so",
    "src/snowflake/connector/_internal/*.pyd",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.hooks.custom]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-vv",
    "-n 16",
    "--durations=0",
]
# Default timeout for tests (2 minutes) - prevents hanging tests on CI
timeout = 120
markers = [
    "skip_reference(reason: str=''): skip when --connector=reference",
    "skip_universal(reason: str=''): skip when --connector=universal",
    "slow: marks tests as slow (e.g., full sdist install with Rust compilation)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(pathname)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["snowflake"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/protobuf_gen/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = "src/**/"

[[tool.mypy.overrides]]
module = "snowflake.connector._internal.protobuf_gen.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ===== Hatch Configuration =====

[tool.hatch.envs.default]
features = ["test", "dev"]
installer = "uv"

# Precommit environment
[tool.hatch.envs.precommit.scripts]
check = [
    'ruff format --check {args:src/snowflake tests}',
    'ruff check {args:src/snowflake tests}',
    'mypy -p snowflake.connector',
]
fix = [
    'ruff format src/snowflake tests',
    'ruff check --fix src/snowflake tests',
    # Run format once again as linting may have changed files.
    'ruff format src/snowflake tests',
    'mypy -p snowflake.connector',
]

# This basic development environment. By default, it installs the driver
# from sources in editable mode
[tool.hatch.envs.dev]
skip-install = false
dev-mode = true

[tool.hatch.envs.dev.env-vars]
# IMPORTANT: PARAMETER_PATH must be explicitly set
PARAMETER_PATH = "{env:PARAMETER_PATH:../parameters.json}"
# Skip core build if library already exists (avoids cmake build issues)
SKIP_CORE_BUILD = "{env:SKIP_CORE_BUILD:1}"

[[tool.hatch.envs.dev.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.dev.scripts]
# Unit tests
unit = "pytest tests/unit {args}"
# Integration tests
integ = "pytest tests/integ {args}"
# End-to-end tests
e2e = "pytest tests/e2e {args}"
# All tests
all = "pytest tests/ --ignore=tests/packaging {args}"
# All tests with coverage
all-cov = "pytest tests/ --ignore=tests/packaging --cov=src/snowflake --cov-report=xml --cov-report=html {args}"

# This environment skips installing the ud version from sources,
# installs from wheel via install-wheel
[tool.hatch.envs.test]
template = "dev"
skip-install = true
dev-mode = false

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.test.scripts]
# Install from wheel
install-wheel = "uv pip install {env:WHEEL_PATH:dist/*.whl}"

# Packaging tests environment - tests sdist build and installation
[tool.hatch.envs.packaging]
features = ["test"]
installer = "uv"
extra-dependencies = ["build"]

[[tool.hatch.envs.packaging.matrix]]
python = ["3.13"]

[tool.hatch.envs.packaging.scripts]
test = "pytest tests/packaging {args}"

# Reference connector environment installs only reference connector
[tool.hatch.envs.reference]
template = "test"

[tool.hatch.envs.reference.scripts]
# This environment runs with old driver only. UD driver is not installed.
test = [
    "uv pip uninstall snowflake-connector-python-ud",
    "uv pip install snowflake-connector-python=={env:PYTHON_REFERENCE_DRIVER_VERSION:4.2.0}",
    "pytest tests/integ tests/e2e {args}"
]
compare = "python ci/reference_tests/compare_reports.py {args}"
