[package]
name = "sf_core"
edition = "2024"

[lib]
name = "sf_core"
crate-type = ["dylib", "rlib"]

[features]
default = []
fips = ["rustls/fips"]

[dependencies]
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0" }
opentelemetry-semantic-conventions = { version = "0.30.0" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }
tokio-stream = "0.1"
toml = "0.8"
uuid = { version = "1.18", features = ["v4"] }
base64 = "0.22.1"
arrow = { version = "56.0.0", features = ["ffi"] }
arrow-ipc = "56.0.0"
flate2 = "1.1.2"
openssl = "0.10.73"
jwt = { version = "0.16.0", features = ["openssl"] }
infer = "0.19.0"

# Proto
prost = "0.14.1"
proto_utils = { path = "../proto_utils" }

# AWS SDK dependencies
aws-sdk-s3 = "1.103.0"
aws-config = "1.8.5"
aws-credential-types = "1.2.5"
snafu = "0.8.7"
error_trace = { path = "../error_trace" }
glob = "0.3.3"

# CRL and TLS dependencies
rustls = { version = "0.23.20", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
rustls-webpki = "0.102"
rustls-native-certs = "0.8"
thiserror = "1.0.69"
aws-lc-rs = "1.13.2"
x509-parser = "0.16"
der-parser = "9.0"
x509-cert = "0.2"
spki = "0.7"
time = "0.3"
once_cell = "1.19"
const-oid = "0.9"
dirs = "5.0"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
urlencoding = "2.1"
hex = "0.4"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
signature = "2"
der = "0.7"
pkcs1 = "0.7"
num-traits = "0.2.19"

[build-dependencies]
proto_generator = { path = "../proto_generator" }

[dev-dependencies]
tempfile = "3.21.0"
arrow_deserialize_macro = { path = "tests/common/arrow_deserialize_macro" }
bzip2 = "0.6.0"
brotli = "8.0.2"
zstd = "0.13.3"
test-case = "3.3.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
wiremock = "0.6"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e_tests"
path = "tests/e2e/mod.rs"

[[bin]]
name = "tls_client"
path = "src/bin/tls_client.rs"
