[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance-tests"
version = "0.1.0"
description = "Performance tests for Universal Driver"
requires-python = ">=3.10"
dependencies = [
    "testcontainers>=4.9.0",
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.hatch.envs.default]
dependencies = [
    "testcontainers>=4.9.0",
    "pytest>=8.3.0",
    # Benchstore upload dependencies
    "pyCLI>=2.0.0",
    "pyyaml>=6.0",
    "benchstore-client-library>=3.9.0",
]
pre-install-commands = [
    "pip install snowflake-connector-python[secure-local-storage] -t drivers/python/old_driver_src"
]

[tool.hatch.envs.default.env-vars]
# Configure pip to use internal Nexus for packages like benchstore-client-library
PIP_EXTRA_INDEX_URL = "https://nexus.int.snowflakecomputing.com/repository/pypi-internal/simple"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# Suppress pytest section headers by using short traceback and disabling verbosity for log headers
addopts = "--tb=short --show-capture=no"
markers = [
    "iterations(n): set number of test iterations for this test",
    "warmup_iterations(n): set number of warmup iterations for this test"
]

[tool.hatch.envs.default.scripts]

# Build drivers (Docker images)
build-python = "bash -c 'cd drivers/python && ./build.sh'"
build-core = "bash -c 'cd drivers/core && ./build.sh'"
build-odbc = "bash -c 'cd drivers/odbc && ./build.sh'"
build = "bash -c 'cd drivers/python && ./build.sh && cd ../core && ./build.sh && cd ../odbc && ./build.sh'"

# Local (always builds before execution)
core-local = ["build-core", "python -m pytest {args:tests/} --driver=core -s -v"]
# Core with local binary (no Docker, no build needed)
core-local-no-docker = "python -m pytest {args:tests/} --driver=core --use-local-binary -s -v"
python-universal-local = ["build-python", "python -m pytest {args:tests/} --driver=python --driver-type=universal -s -v"]
python-old-local = ["build-python", "python -m pytest {args:tests/} --driver=python --driver-type=old -s -v"]
python-both-local = ["build-python", "python -m pytest {args:tests/} --driver=python --driver-type=both -s -v"]
odbc-universal-local = ["build-odbc", "python -m pytest {args:tests/} --driver=odbc --driver-type=universal -s -v"]
odbc-old-local = ["build-odbc", "python -m pytest {args:tests/} --driver=odbc --driver-type=old -s -v"]
odbc-both-local = ["build-odbc", "python -m pytest {args:tests/} --driver=odbc --driver-type=both -s -v"]

# CI
core = "python -m pytest {args:tests/} --driver=core --upload-to-benchstore -s -v"
python-universal = "python -m pytest {args:tests/} --driver=python --driver-type=universal --upload-to-benchstore -s -v"
python-old = "python -m pytest {args:tests/} --driver=python --driver-type=old --upload-to-benchstore -s -v"
python-both = "python -m pytest {args:tests/} --driver=python --driver-type=both --upload-to-benchstore -s -v"
odbc-universal = "python -m pytest {args:tests/} --driver=odbc --driver-type=universal --upload-to-benchstore -s -v"
odbc-old = "python -m pytest {args:tests/} --driver=odbc --driver-type=old --upload-to-benchstore -s -v"
odbc-both = "python -m pytest {args:tests/} --driver=odbc --driver-type=both --upload-to-benchstore -s -v"

# Clean all generated files and results
clean = """python -c "
import shutil
from pathlib import Path
dirs = ['.pytest_cache', 'tests/__pycache__', 'runner/__pycache__', 'results']
for d in dirs:
    if Path(d).exists():
        shutil.rmtree(d)
print('✓ Cleaned cache directories and results')
"
"""
