[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance-tests"
version = "0.1.0"
description = "Performance tests for Universal Driver"
requires-python = ">=3.10"
dependencies = [
    "testcontainers>=4.9.0",
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.hatch.envs.default]
dependencies = [
    "testcontainers>=4.9.0",
    "pytest>=8.3.0",
    # Benchstore upload dependencies
    "pyCLI>=2.0.0",
    "pyyaml>=6.0",
    "benchstore-client-library>=3.9.0",
]
pre-install-commands = [
    "pip install snowflake-connector-python[secure-local-storage] -t drivers/python/old_driver_src"
]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://artifactory.ci1.us-west-2.aws-dev.app.snowflake.com/artifactory/api/pypi/internal-production-pypi-snowflake-virtual/simple"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# Suppress pytest section headers by using short traceback and disabling verbosity for log headers
addopts = "--tb=short --show-capture=no"
markers = [
    "iterations(n): set number of test iterations for this test",
    "warmup_iterations(n): set number of warmup iterations for this test"
]

[tool.hatch.envs.default.scripts]

# Build drivers (Docker images)
build-python = "bash -c 'cd drivers/python && ./build.sh'"
build-core = "bash -c 'cd drivers/core && ./build.sh'"
build-odbc = "bash -c 'cd drivers/odbc && ./build.sh'"
build-wiremock = "bash -c 'cd wiremock && ./build.sh'"
build = "bash -c 'cd drivers/python && ./build.sh && cd ../core && ./build.sh && cd ../odbc && ./build.sh && cd ../wiremock && ./build.sh'"

# Local (always builds before execution, including WireMock for tests that need it)
# Preserves WireMock mappings for debugging
core-local = ["build-core", "build-wiremock", "python -m pytest {args:tests/} --driver=core --preserve-mappings -s -v"]
# Core with local binary (no Docker, no build needed)
core-local-no-docker = "python -m pytest {args:tests/} --driver=core --use-local-binary --preserve-mappings -s -v"
python-universal-local = ["build-python", "build-wiremock", "python -m pytest {args:tests/} --driver=python --driver-type=universal --preserve-mappings -s -v"]
python-old-local = ["build-python", "build-wiremock", "python -m pytest {args:tests/} --driver=python --driver-type=old --preserve-mappings -s -v"]
python-both-local = ["build-python", "build-wiremock", "python -m pytest {args:tests/} --driver=python --driver-type=both --preserve-mappings -s -v"]
odbc-universal-local = ["build-odbc", "build-wiremock", "python -m pytest {args:tests/} --driver=odbc --driver-type=universal --preserve-mappings -s -v"]
odbc-old-local = ["build-odbc", "build-wiremock", "python -m pytest {args:tests/} --driver=odbc --driver-type=old --preserve-mappings -s -v"]
odbc-both-local = ["build-odbc", "build-wiremock", "python -m pytest {args:tests/} --driver=odbc --driver-type=both --preserve-mappings -s -v"]

# CI
core = "python -m pytest {args:tests/} --driver=core --upload-to-benchstore -s -v"
python-universal = "python -m pytest {args:tests/} --driver=python --driver-type=universal --upload-to-benchstore -s -v"
python-old = "python -m pytest {args:tests/} --driver=python --driver-type=old --upload-to-benchstore -s -v"
python-both = "python -m pytest {args:tests/} --driver=python --driver-type=both --upload-to-benchstore -s -v"
odbc-universal = "python -m pytest {args:tests/} --driver=odbc --driver-type=universal --upload-to-benchstore -s -v"
odbc-old = "python -m pytest {args:tests/} --driver=odbc --driver-type=old --upload-to-benchstore -s -v"
odbc-both = "python -m pytest {args:tests/} --driver=odbc --driver-type=both --upload-to-benchstore -s -v"

# Clean all generated files and results
clean = """python -c '
import shutil
from pathlib import Path

# Clean all generated directories
dirs = [".pytest_cache", "tests/__pycache__", "runner/__pycache__", "wiremock/__pycache__", "results", "mappings"]
for d in dirs:
    if Path(d).exists():
        shutil.rmtree(d)
        print("✓ Cleaned:", d)

print("✓ All cache directories, results, and mappings cleaned")
'
"""
