[package]
name = "tests_format_validator"
version = "0.1.0"
edition = "2021"

# Make this an independent workspace
[workspace]

[[bin]]
name = "tests_format_validator"
path = "src/main.rs"

[lib]
name = "tests_format_validator"
path = "src/lib.rs"

[dependencies]
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
convert_case = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.21"
